--- a/C2 - Advanced Learning Algorithms/week2/optional-labs/C2_W2_SoftMax.ipynb
+++ b/C2 - Advanced Learning Algorithms/week2/optional-labs/C2_W2_SoftMax.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -254,34 +254,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "63/63 [==============================] - 0s 966us/step - loss: 0.8312\n",
+      "63/63 [==============================] - 3s 9ms/step - loss: 1.1356\n",
       "Epoch 2/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.3203\n",
+      "63/63 [==============================] - 1s 8ms/step - loss: 0.4586\n",
       "Epoch 3/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.1408\n",
+      "63/63 [==============================] - 1s 8ms/step - loss: 0.1863\n",
       "Epoch 4/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0847\n",
+      "63/63 [==============================] - 1s 8ms/step - loss: 0.1016\n",
       "Epoch 5/10\n",
-      "63/63 [==============================] - 0s 944us/step - loss: 0.0626\n",
+      "63/63 [==============================] - 0s 5ms/step - loss: 0.0735\n",
       "Epoch 6/10\n",
-      "63/63 [==============================] - 0s 974us/step - loss: 0.0515\n",
+      "63/63 [==============================] - 0s 4ms/step - loss: 0.0605\n",
       "Epoch 7/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0447\n",
+      "63/63 [==============================] - 0s 5ms/step - loss: 0.0531\n",
       "Epoch 8/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0402\n",
+      "63/63 [==============================] - 0s 6ms/step - loss: 0.0478\n",
       "Epoch 9/10\n",
-      "63/63 [==============================] - 0s 922us/step - loss: 0.0361\n",
+      "63/63 [==============================] - 0s 4ms/step - loss: 0.0444\n",
       "Epoch 10/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0332\n"
+      "63/63 [==============================] - 0s 4ms/step - loss: 0.0406\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fd399415490>"
+       "<keras.src.callbacks.History at 0x1f246241c90>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,16 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.39e-03 1.02e-02 9.73e-01 1.30e-02]\n",
-      " [9.97e-01 3.46e-03 9.35e-06 9.02e-06]]\n",
-      "largest value 0.9999994 smallest value 4.1378247e-09\n"
+      "63/63 [==============================] - 0s 1ms/step\n",
+      "[[3.61e-03 3.70e-03 9.75e-01 1.82e-02]\n",
+      " [9.97e-01 2.55e-03 1.43e-04 1.21e-04]]\n",
+      "largest value 0.99999917 smallest value 1.762668e-08\n"
      ]
     }
    ],
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -362,34 +363,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 1.0936\n",
+      "63/63 [==============================] - 1s 2ms/step - loss: 1.2765\n",
       "Epoch 2/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.4933\n",
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.5795\n",
       "Epoch 3/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.2809\n",
+      "63/63 [==============================] - 0s 3ms/step - loss: 0.3157\n",
       "Epoch 4/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.1506\n",
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.1829\n",
       "Epoch 5/10\n",
-      "63/63 [==============================] - 0s 966us/step - loss: 0.0916\n",
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.1060\n",
       "Epoch 6/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0694\n",
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.0787\n",
       "Epoch 7/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0592\n",
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.0652\n",
       "Epoch 8/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0527\n",
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.0573\n",
       "Epoch 9/10\n",
-      "63/63 [==============================] - 0s 919us/step - loss: 0.0489\n",
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.0519\n",
       "Epoch 10/10\n",
-      "63/63 [==============================] - 0s 1ms/step - loss: 0.0457\n"
+      "63/63 [==============================] - 0s 2ms/step - loss: 0.0473\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fd23c552050>"
+       "<keras.src.callbacks.History at 0x1f24630e050>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,17 +426,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "63/63 [==============================] - 0s 1ms/step\n",
       "two example output vectors:\n",
-      " [[-2.72 -4.45  2.9  -1.37]\n",
-      " [ 6.42  1.32 -1.32 -6.74]]\n",
-      "largest value 12.410254 smallest value -13.030992\n"
+      " [[-1.6  -2.1   4.11  0.38]\n",
+      " [ 3.95 -0.96 -3.16 -3.77]]\n",
+      "largest value 10.826424 smallest value -6.431843\n"
      ]
     }
    ],
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -463,9 +465,9 @@
      "output_type": "stream",
      "text": [
       "two example output vectors:\n",
-      " [[3.55e-03 6.34e-04 9.82e-01 1.38e-02]\n",
-      " [9.94e-01 6.05e-03 4.35e-04 1.92e-06]]\n",
-      "largest value 0.9999995 smallest value 1.5196424e-11\n"
+      " [[3.21e-03 1.95e-03 9.71e-01 2.34e-02]\n",
+      " [9.91e-01 7.31e-03 8.13e-04 4.41e-04]]\n",
+      "largest value 0.99998593 smallest value 4.732432e-08\n"
      ]
     }
    ],
@@ -484,18 +486,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.72 -4.45  2.9  -1.37], category: 2\n",
-      "[ 6.42  1.32 -1.32 -6.74], category: 0\n",
-      "[ 4.64  1.5  -1.31 -5.3 ], category: 0\n",
-      "[-0.29  3.76 -3.11 -1.58], category: 1\n",
-      "[-0.64 -6.05  5.23 -5.2 ], category: 2\n"
+      "[-1.6  -2.1   4.11  0.38], category: 2\n",
+      "[ 3.95 -0.96 -3.16 -3.77], category: 0\n",
+      "[ 2.87 -0.41 -2.47 -3.05], category: 0\n",
+      "[-1.5   3.36 -1.88 -1.91], category: 1\n",
+      "[-0.67 -3.38  5.05 -1.8 ], category: 2\n"
      ]
     }
    ],
