--- a/C2 - Advanced Learning Algorithms/week4/optional-labs/C2_W4_Lab_02_Tree_Ensemble.ipynb
+++ b/C2 - Advanced Learning Algorithms/week4/optional-labs/C2_W4_Lab_02_Tree_Ensemble.ipynb
@@ -31,7 +31,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "!pip install xgboost --quiet\n",
+    "%pip install xgboost --quiet\n",
     "from xgboost import XGBClassifier\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('./deeplearning.mplstyle')\n",
