--- a/C2 - Advanced Learning Algorithms/week4/optional-labs/C2_W4_Lab_02_Tree_Ensemble.ipynb
+++ b/C2 - Advanced Learning Algorithms/week4/optional-labs/C2_W4_Lab_02_Tree_Ensemble.ipynb
@@ -21,9 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +109,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>ChestPainType</th>\n",
+       "      <th>RestingBP</th>\n",
+       "      <th>Cholesterol</th>\n",
+       "      <th>FastingBS</th>\n",
+       "      <th>RestingECG</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>ExerciseAngina</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>ST_Slope</th>\n",
+       "      <th>HeartDisease</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40</td>\n",
+       "      <td>M</td>\n",
+       "      <td>ATA</td>\n",
+       "      <td>140</td>\n",
+       "      <td>289</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>172</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>49</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NAP</td>\n",
+       "      <td>160</td>\n",
+       "      <td>180</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>156</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Flat</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>M</td>\n",
+       "      <td>ATA</td>\n",
+       "      <td>130</td>\n",
+       "      <td>283</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>98</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48</td>\n",
+       "      <td>F</td>\n",
+       "      <td>ASY</td>\n",
+       "      <td>138</td>\n",
+       "      <td>214</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Flat</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NAP</td>\n",
+       "      <td>150</td>\n",
+       "      <td>195</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>122</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Sex ChestPainType  RestingBP  Cholesterol  FastingBS RestingECG  MaxHR  \\\n",
+       "0   40   M           ATA        140          289          0     Normal    172   \n",
+       "1   49   F           NAP        160          180          0     Normal    156   \n",
+       "2   37   M           ATA        130          283          0         ST     98   \n",
+       "3   48   F           ASY        138          214          0     Normal    108   \n",
+       "4   54   M           NAP        150          195          0     Normal    122   \n",
+       "\n",
+       "  ExerciseAngina  Oldpeak ST_Slope  HeartDisease  \n",
+       "0              N      0.0       Up             0  \n",
+       "1              N      1.0     Flat             1  \n",
+       "2              N      0.0       Up             0  \n",
+       "3              Y      1.5     Flat             1  \n",
+       "4              N      0.0       Up             0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -126,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,9 +311,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>RestingBP</th>\n",
+       "      <th>Cholesterol</th>\n",
+       "      <th>FastingBS</th>\n",
+       "      <th>MaxHR</th>\n",
+       "      <th>Oldpeak</th>\n",
+       "      <th>HeartDisease</th>\n",
+       "      <th>Sex_F</th>\n",
+       "      <th>Sex_M</th>\n",
+       "      <th>ChestPainType_ASY</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ChestPainType_NAP</th>\n",
+       "      <th>ChestPainType_TA</th>\n",
+       "      <th>RestingECG_LVH</th>\n",
+       "      <th>RestingECG_Normal</th>\n",
+       "      <th>RestingECG_ST</th>\n",
+       "      <th>ExerciseAngina_N</th>\n",
+       "      <th>ExerciseAngina_Y</th>\n",
+       "      <th>ST_Slope_Down</th>\n",
+       "      <th>ST_Slope_Flat</th>\n",
+       "      <th>ST_Slope_Up</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40</td>\n",
+       "      <td>140</td>\n",
+       "      <td>289</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>49</td>\n",
+       "      <td>160</td>\n",
+       "      <td>180</td>\n",
+       "      <td>0</td>\n",
+       "      <td>156</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>130</td>\n",
+       "      <td>283</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>48</td>\n",
+       "      <td>138</td>\n",
+       "      <td>214</td>\n",
+       "      <td>0</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54</td>\n",
+       "      <td>150</td>\n",
+       "      <td>195</td>\n",
+       "      <td>0</td>\n",
+       "      <td>122</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  RestingBP  Cholesterol  FastingBS  MaxHR  Oldpeak  HeartDisease  \\\n",
+       "0   40        140          289          0    172      0.0             0   \n",
+       "1   49        160          180          0    156      1.0             1   \n",
+       "2   37        130          283          0     98      0.0             0   \n",
+       "3   48        138          214          0    108      1.5             1   \n",
+       "4   54        150          195          0    122      0.0             0   \n",
+       "\n",
+       "   Sex_F  Sex_M  ChestPainType_ASY  ...  ChestPainType_NAP  ChestPainType_TA  \\\n",
+       "0  False   True              False  ...              False             False   \n",
+       "1   True  False              False  ...               True             False   \n",
+       "2  False   True              False  ...              False             False   \n",
+       "3   True  False               True  ...              False             False   \n",
+       "4  False   True              False  ...               True             False   \n",
+       "\n",
+       "   RestingECG_LVH  RestingECG_Normal  RestingECG_ST  ExerciseAngina_N  \\\n",
+       "0           False               True          False              True   \n",
+       "1           False               True          False              True   \n",
+       "2           False              False           True              True   \n",
+       "3           False               True          False             False   \n",
+       "4           False               True          False              True   \n",
+       "\n",
+       "   ExerciseAngina_Y  ST_Slope_Down  ST_Slope_Flat  ST_Slope_Up  \n",
+       "0             False          False          False         True  \n",
+       "1             False          False           True        False  \n",
+       "2             False          False          False         True  \n",
+       "3              True          False           True        False  \n",
+       "4             False          False          False         True  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -183,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,9 +550,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(var))"
    ]
@@ -217,16 +576,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function train_test_split in module sklearn.model_selection._split:\n",
+      "\n",
+      "train_test_split(*arrays, test_size=None, train_size=None, random_state=None, shuffle=True, stratify=None)\n",
+      "    Split arrays or matrices into random train and test subsets.\n",
+      "    \n",
+      "    Quick utility that wraps input validation,\n",
+      "    ``next(ShuffleSplit().split(X, y))``, and application to input data\n",
+      "    into a single call for splitting (and optionally subsampling) data into a\n",
+      "    one-liner.\n",
+      "    \n",
+      "    Read more in the :ref:`User Guide <cross_validation>`.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    *arrays : sequence of indexables with same length / shape[0]\n",
+      "        Allowed inputs are lists, numpy arrays, scipy-sparse\n",
+      "        matrices or pandas dataframes.\n",
+      "    \n",
+      "    test_size : float or int, default=None\n",
+      "        If float, should be between 0.0 and 1.0 and represent the proportion\n",
+      "        of the dataset to include in the test split. If int, represents the\n",
+      "        absolute number of test samples. If None, the value is set to the\n",
+      "        complement of the train size. If ``train_size`` is also None, it will\n",
+      "        be set to 0.25.\n",
+      "    \n",
+      "    train_size : float or int, default=None\n",
+      "        If float, should be between 0.0 and 1.0 and represent the\n",
+      "        proportion of the dataset to include in the train split. If\n",
+      "        int, represents the absolute number of train samples. If None,\n",
+      "        the value is automatically set to the complement of the test size.\n",
+      "    \n",
+      "    random_state : int, RandomState instance or None, default=None\n",
+      "        Controls the shuffling applied to the data before applying the split.\n",
+      "        Pass an int for reproducible output across multiple function calls.\n",
+      "        See :term:`Glossary <random_state>`.\n",
+      "    \n",
+      "    shuffle : bool, default=True\n",
+      "        Whether or not to shuffle the data before splitting. If shuffle=False\n",
+      "        then stratify must be None.\n",
+      "    \n",
+      "    stratify : array-like, default=None\n",
+      "        If not None, data is split in a stratified fashion, using this as\n",
+      "        the class labels.\n",
+      "        Read more in the :ref:`User Guide <stratification>`.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    splitting : list, length=2 * len(arrays)\n",
+      "        List containing train-test split of inputs.\n",
+      "    \n",
+      "        .. versionadded:: 0.16\n",
+      "            If the input is sparse, the output will be a\n",
+      "            ``scipy.sparse.csr_matrix``. Else, output type is the same as the\n",
+      "            input type.\n",
+      "    \n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> import numpy as np\n",
+      "    >>> from sklearn.model_selection import train_test_split\n",
+      "    >>> X, y = np.arange(10).reshape((5, 2)), range(5)\n",
+      "    >>> X\n",
+      "    array([[0, 1],\n",
+      "           [2, 3],\n",
+      "           [4, 5],\n",
+      "           [6, 7],\n",
+      "           [8, 9]])\n",
+      "    >>> list(y)\n",
+      "    [0, 1, 2, 3, 4]\n",
+      "    \n",
+      "    >>> X_train, X_test, y_train, y_test = train_test_split(\n",
+      "    ...     X, y, test_size=0.33, random_state=42)\n",
+      "    ...\n",
+      "    >>> X_train\n",
+      "    array([[4, 5],\n",
+      "           [0, 1],\n",
+      "           [6, 7]])\n",
+      "    >>> y_train\n",
+      "    [2, 0, 3]\n",
+      "    >>> X_test\n",
+      "    array([[2, 3],\n",
+      "           [8, 9]])\n",
+      "    >>> y_test\n",
+      "    [1, 4]\n",
+      "    \n",
+      "    >>> train_test_split(y, shuffle=False)\n",
+      "    [[0, 1, 2], [3, 4]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(train_test_split)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,9 +690,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train samples: 734\n",
+      "test samples: 184\n",
+      "target proportion: 0.5518\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'train samples: {len(X_train)}\\ntest samples: {len(X_test)}')\n",
     "print(f'target proportion: {sum(y_train)/len(y_train):.4f}')"
@@ -630,7 +1093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
